[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/BACKTO1982.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Background.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Menus/OptionsMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 11
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 11
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 11
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 11
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 11
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 11
font_data = ExtResource( 1 )

[node name="OptionsMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Menu" type="MarginContainer" parent="."]
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Menu"]
position = Vector2( 615, 357 )
scale = Vector2( 1.01797, 1.19839 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = 20.0
margin_top = 20.0
margin_right = 620.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Back" type="Button" parent="Menu/VBoxContainer"]
margin_left = 274.0
margin_right = 326.0
margin_bottom = 18.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
text = "Back"

[node name="Master" type="VBoxContainer" parent="Menu/VBoxContainer"]
margin_top = 22.0
margin_right = 600.0
margin_bottom = 78.0
size_flags_vertical = 3

[node name="MasterLabel" type="Label" parent="Menu/VBoxContainer/Master"]
margin_right = 60.0
margin_bottom = 12.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Master"

[node name="Master" type="HSlider" parent="Menu/VBoxContainer/Master"]
margin_top = 16.0
margin_right = 600.0
margin_bottom = 32.0
size_flags_vertical = 1
max_value = 1.0
step = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound effect" type="VBoxContainer" parent="Menu/VBoxContainer"]
margin_top = 82.0
margin_right = 600.0
margin_bottom = 138.0
size_flags_vertical = 3

[node name="SoundEffectLabel" type="Label" parent="Menu/VBoxContainer/Sound effect"]
margin_right = 124.0
margin_bottom = 12.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "Sound Effects"

[node name="SoundEffect" type="HSlider" parent="Menu/VBoxContainer/Sound effect"]
margin_top = 16.0
margin_right = 600.0
margin_bottom = 32.0
size_flags_vertical = 1
max_value = 1.0
step = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue" type="VBoxContainer" parent="Menu/VBoxContainer"]
margin_top = 142.0
margin_right = 600.0
margin_bottom = 199.0
size_flags_vertical = 3

[node name="DialogueLabel" type="Label" parent="Menu/VBoxContainer/Dialogue"]
margin_right = 76.0
margin_bottom = 12.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "Dialogue"

[node name="Dialogue" type="HSlider" parent="Menu/VBoxContainer/Dialogue"]
margin_top = 16.0
margin_right = 600.0
margin_bottom = 32.0
size_flags_vertical = 1
max_value = 1.0
step = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ambient" type="VBoxContainer" parent="Menu/VBoxContainer"]
margin_top = 203.0
margin_right = 600.0
margin_bottom = 259.0
size_flags_vertical = 3

[node name="AmbientLabel" type="Label" parent="Menu/VBoxContainer/Ambient"]
margin_right = 67.0
margin_bottom = 12.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 5 )
text = "Ambient"

[node name="Ambient" type="HSlider" parent="Menu/VBoxContainer/Ambient"]
margin_top = 16.0
margin_right = 600.0
margin_bottom = 32.0
size_flags_vertical = 1
max_value = 1.0
step = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="VBoxContainer" parent="Menu/VBoxContainer"]
margin_top = 263.0
margin_right = 600.0
margin_bottom = 320.0
size_flags_vertical = 3

[node name="MusicLabel" type="Label" parent="Menu/VBoxContainer/Music"]
margin_right = 47.0
margin_bottom = 12.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 6 )
text = "Music"

[node name="Music" type="HSlider" parent="Menu/VBoxContainer/Music"]
margin_top = 16.0
margin_right = 600.0
margin_bottom = 32.0
size_flags_vertical = 1
max_value = 1.0
step = 0.05
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="value_changed" from="Menu/VBoxContainer/Master/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="Menu/VBoxContainer/Sound effect/SoundEffect" to="." method="_on_SoundEffect_value_changed"]
[connection signal="value_changed" from="Menu/VBoxContainer/Dialogue/Dialogue" to="." method="_on_Dialogue_value_changed"]
[connection signal="value_changed" from="Menu/VBoxContainer/Ambient/Ambient" to="." method="_on_Ambient_value_changed"]
[connection signal="value_changed" from="Menu/VBoxContainer/Music/Music" to="." method="_on_Music_value_changed"]
